[DOC] Prometheus and Grafana wip

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -356,6 +356,12 @@ https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/okt
 	title        = {{B}lackbox exporter},
 }
 
+@misc{PrometheusAdapter,
+	author       = {{Kubernetes community}},
+	howpublished = {\url{https://github.com/kubernetes-sigs/prometheus-adapter} (accessed at 26/04/2022)},
+	title        = {{P}rometheus {A}dapter for {K}ubernetes {M}etrics {A}{P}{I}s},
+}
+
 @misc{Pandas,
 	author       = {{Pandas community}},
 	howpublished = {\url{https://pandas.pydata.org/} (accessed at 24/04/2022)},
@@ -378,5 +384,11 @@ https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/okt
 	author       = {{Wikipedia}},
 	howpublished = {\url{https://en.wikipedia.org/wiki/Software_as_a_service} (accessed at 25/04/2022)},
 	title        = {{S}oftware as a service},
+}
+
+@misc{Grafana,
+	author       = {{Grafana Labs}},
+	howpublished = {\url{https://grafana.com/grafana/} (accessed at 25/04/2022)},
+	title        = {{G}rafana {F}eatures},
 }
 
