[DOC] Chaos Engineering and Kafka notes

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -392,3 +392,29 @@ https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/okt
 	title        = {{G}rafana {F}eatures},
 }
 
+@misc{PrinciplesOfChaos,
+	author       = {{Chaos Community}},
+	howpublished = {\url{https://principlesofchaos.org/} (accessed at 26/04/2022)},
+	title        = {{P}rinciples of {C}haos {E}ngineering},
+}
+
+@misc{ChaosMesh,
+	author       = {{Chaos Mesh Authors}},
+	howpublished = {\url{https://chaos-mesh.org/} (accessed at 27/04/2022)},
+	title        = {Chaos Mesh - {A} {P}owerful {C}haos {E}ngineering {P}latform for {K}ubernetes},
+}
+
+@book{KafkaDefinitive,
+	author       = {{Gwen Shapira and Todd Palino and Rajini Sivaram and Krit Petty}},
+	title        = {{K}afka: {T}he {D}efinitive {G}uide},
+	publisher    = {O’Reilly Media},
+	year		 = {2022},
+	edition		 = {{S}econd},
+}
+
+@misc{PubSubAmazon,
+	author       = {{Amazon Web Services}},
+	howpublished = {\url{https://aws.amazon.com/pub-sub-messaging/} (accessed at 27/04/2022)},
+	title        = {{P}ub/{S}ub {M}essaging},
+}
+
