[DOC] Future work notes

--- a/docs/content/future-work.tex
+++ b/docs/content/future-work.tex
@@ -4,9 +4,14 @@
 
 \begin{itemize}
 	\item database in HA mode (currently single instance)
-	\item fine-tune chaos experiments
+	\item fine-tune chaos experiments, set parameters
 	\begin{itemize}
 		\item stresschaos has practically no effect
 	\end{itemize}
-	\item HPA enhancement
+	\item HPA enhancement for backend
+	\item run measurements in GKE, AKS
+	\item decompose Jenkins job
+	\item improve Kafka configurations to make it usable
+	\item locust user parameterization
+	\item try to create more enhancements
 \end{itemize}
