--- a/docs/content/related-works.tex
+++ b/docs/content/related-works.tex
@@ -3,6 +3,12 @@
 %----------------------------------------------------------------------------
 
 \begin{itemize}
+	\item Sonobuoy https://sonobuoy.io/
+	\begin{itemize}
+		\item "Sonobuoy is a diagnostic tool that makes it easier to understand the state of a Kubernetes cluster by running a choice of configuration tests in an accessible and non-destructive manner."
+		\item Reliability Scanner for Kubernetes https://sonobuoy.io/reliability-scanner-kubernetes-clusters/
+		\item "The Reliability Scanner is a customizable Sonobuoy Plugin that captures good practices for operating workloads reliably atop Kubernetes."
+	\end{itemize}
 	\item Gremlin?
-	\item netflix chaos monkey
+	\item kube-monkey https://github.com/asobti/kube-monkey
 \end{itemize}
