[DOC] Related Works

--- a/docs/content/related-works.tex
+++ b/docs/content/related-works.tex
@@ -2,13 +2,36 @@
 \chapter{Related Works}
 %----------------------------------------------------------------------------
 
-\begin{itemize}
-	\item Sonobuoy https://sonobuoy.io/
-	\begin{itemize}
-		\item "Sonobuoy is a diagnostic tool that makes it easier to understand the state of a Kubernetes cluster by running a choice of configuration tests in an accessible and non-destructive manner."
-		\item Reliability Scanner for Kubernetes https://sonobuoy.io/reliability-scanner-kubernetes-clusters/
-		\item "The Reliability Scanner is a customizable Sonobuoy Plugin that captures good practices for operating workloads reliably atop Kubernetes."
-	\end{itemize}
-	\item Gremlin?
-	\item kube-monkey https://github.com/asobti/kube-monkey
-\end{itemize}
+The accomplished implementation of the entire thesis work -- including the sample application and the test framework -- realizes a unique set of functionalities in a single system compared to available tools on the market and in the open-source community. However, there are a couple of parts in this system that fulfills a job similar to other existing softwares, like conducting reliability analysis or executing chaos engineering scenarios in Kubernetes based environments. This chapter attempts to collect some of them, without being exhaustive.
+
+%----------------------------------------------------------------------------
+\section{Kubernetes Dependability Related Tools}
+%----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
+\subsection{Sonobuoy}
+%----------------------------------------------------------------------------
+
+Sonobuoy is diagnostic tool that can analyze and evaluate the state of a running Kubernetes cluster based on various criteria in a non-destructive manner. Among many things, it can be used to perform security of conformance benchmarks and to create inventories collecting all the workloads and operational details on a cluster \cite{Sonobuoy}.
+
+Sonobuoy can be extended to facilitate custom or third-party testing requirements through a plugin system. The plugin that is most related to this thesis work is the Reliability Scanner plugin \cite{SonobuoyReliabilityScanner}. The Reliability Scanner captures and inspects good practices for operating workloads reliably on Kubernetes which includes the existence verification of  probes, ownership indicators and Quality of Service configurations.
+
+%----------------------------------------------------------------------------
+\section{Chaos Engineering Tools}
+%----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
+\subsection{Gremlin}
+%----------------------------------------------------------------------------
+
+Gremlin is a comprehensive, enterprise ready Chaos Engineering platform to enable its users to proactively improve their systems' reliability \cite{Gremlin}. It is provided with a SaaS model, where customers can easily access and manage their chaos experiments and scenarios through a browser based interface. Users only have to install Gremlin agents to their machines and connect them to their Gremlin account.
+
+Gremlin is able to inject many kinds of failures into a system. These can impact resources, network traffic or the processes running on the infrastructure. Similarly to Chaos Mesh, Gremlin can also schedule chaos experiments and summarize the attack reports in an organized way.
+
+%----------------------------------------------------------------------------
+\subsection{Litmus}
+%----------------------------------------------------------------------------
+
+Litmus is an open-source cross-cloud Chaos Engineering framework that lets developers and site reliability engineers to define complex set of chaos experiments with various kinds of status checks to form workflows that can identify weaknesses in a Kubernetes based system \cite{Litmus}.
+
+Similarly to Chaos Mesh, Litmus can also be used with the help of Kubernetes Custom Resource Definitions to install the necessary components of Litmus that control and execute the fault injections.
