[DOC] add diagram TODO in introduction

--- a/docs/content/introduction.tex
+++ b/docs/content/introduction.tex
@@ -60,6 +60,12 @@ Lastly, the measurement results should be presented and evaluated, summarizing t
 %	\item present and evaluate the measurement results and summarize the gained experiences
 %\end{itemize}
 
+TODO
+
+overview diagram
+
+TODO
+
 %----------------------------------------------------------------------------
 \section{Thesis structure}
 %----------------------------------------------------------------------------
